# SAGE-GitAgent

./: .gitignore  CONTRIBUTING.md  DUTIES.md  Dockerfile  README.md  RULES.md  SECURITY.md  SOUL.md  agent.yaml  pyproject.toml  run_native.py  test_end_to_end.py  test_gitclaw.py  test_readline.py
.gitagent/: state.json
agents/paper-verifier/: DUTIES.md  SOUL.md  agent.yaml
compliance/: regulatory-map.yaml  risk-assessment.md  validation-schedule.yaml
config/: default.yaml  development.yaml  production.yaml
docs/diagrams/: sage-architecture.drawio  sage-pipeline.drawio
examples/: bad-outputs.md  good-outputs.md
examples/scenarios/: full-pipeline-mingpt.md  sod-verification-flow.md
hf-space-demo/: AGENTS.md  Dockerfile  README.md  RULES.md  SOUL.md  agent.yaml  app.py
hf-space-demo/knowledge/: ml-techniques-taxonomy.md  severity-classification-guide.md
hf-space-demo/src/sage/: __init__.py  arxiv_search.py  gitnexus_query.py
hf-space-demo/tools/: arxiv-search.py  fetch-abstract.py  gitnexus-query.py
hooks/: bootstrap.md  hooks.yaml  teardown.md
hooks/scripts/: on_error.sh  on_session_end.sh  on_session_start.sh  post_tool_use.sh  pre_response.sh  pre_tool_use.sh
knowledge/: arxiv-categories.md  index.yaml
memory/: memory.yaml
skills/hunt-papers/: SKILL.md
skills/identify-gaps/: SKILL.md
skills/scan-codebase/: SKILL.md
skills/summarize-paper/: SKILL.md
src/sage/: fetch_abstract.py  gitnexus_query.py  validation.py
tests/: conftest.py  test_arxiv_search.py  test_fetch_abstract.py  test_gitnexus_query.py  test_integration.py  test_validation.py
tools/: arxiv-search.py  arxiv-search.yaml  fetch-abstract.py  fetch-abstract.yaml  gitnexus-query.py  gitnexus-query.yaml
workflows/: full-pipeline.yaml  human-review.yaml
